# Track-3-connectivity-and-cloud-handoff-setup

./: README.md
hw-track-3-connectivity/: README.md  conftest.py  pyproject.toml
hw-track-3-connectivity/.github/workflows/: ci.yml
hw-track-3-connectivity/ble/: daemon.py  gatt_model.py  mock_peripheral.py  pairing.py
hw-track-3-connectivity/ble/tests/: test_ble.py
hw-track-3-connectivity/cli/: chronis_cli.py
hw-track-3-connectivity/cli/tests/: test_cli.py
hw-track-3-connectivity/cloud/: canonical_db.py  gateway.py
hw-track-3-connectivity/cloud/tests/: test_cloud.py
hw-track-3-connectivity/common/: mock_hal.py  seams.py  types.py
hw-track-3-connectivity/docs/: COMPONENT_SPEC_LIST.md
hw-track-3-connectivity/e2e/: test_full_pipeline.py
hw-track-3-connectivity/orchestration/: supervisor.py
hw-track-3-connectivity/orchestration/tests/: test_supervisor.py
hw-track-3-connectivity/orchestration/units/: ble-daemon.unit  cloud-gateway.unit  encryption-daemon.unit  storage-daemon.unit
hw-track-3-connectivity/ota/: partitions.py  receiver.py  rollback.py
hw-track-3-connectivity/ota/tests/: test_ota.py
hw-track-3-connectivity/provisioning/: harden.sh
hw-track-3-connectivity/provisioning/tests/: test_provisioning.py
hw-track-3-connectivity/storage/: append_only.py  deletion.py  vault.py
hw-track-3-connectivity/storage/tests/: test_storage.py
