[build-system]
requires = ["setuptools"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "hw-track-3-connectivity"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "cryptography",
    "fastapi",
    "uvicorn",
    "httpx",
    "pydantic",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
]

[tool.pytest.ini_options]
testpaths = [
    "storage/tests",
    "provisioning/tests",
    "ota/tests",
    "ble/tests",
    "orchestration/tests",
    "cli/tests",
    "cloud/tests",
    "e2e",
]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
